--- a/src/scss/bootstrap_src/_pagination.scss
+++ b/src/scss/bootstrap_src/_pagination.scss
@@ -1,8 +1,8 @@
 .pagination {
   display: inline-block;
   padding-left: 0;
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
+  margin-top: $spacer-y;
+  margin-bottom: $spacer-y;
   @include border-radius();
 }
 
