--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -8,12 +8,22 @@
 
       <span class="w3-right">
 
-      <span *ngIf="(progress.percentage < 100)">
+      <span *ngIf="(progress1.percentage < 100)">
 
         <span class="fa fa-spinner w3-spin" style="font-size:20px"></span>
+loading prescriptions
+        : {{progress1.percentage}}% |
+      loaded: {{progress1.total}} bytes
 
-        loading: {{progress.percentage}}% |
-      loaded: {{progress.total}} bytes
+      </span>
+
+        <span *ngIf="(progress2.percentage < 100)">
+
+        <span class="fa fa-spinner w3-spin" style="font-size:20px"></span>
+          loading intakes
+
+        : {{progress2.percentage}}% |
+      loaded: {{progress2.total}} bytes
 
       </span>
       </span>
