--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -1,5 +1,10 @@
 <div class="animated fadeIn">
 
+  <button *ngIf="cardToShow==='overview'" type="button"
+          (click)="refresh()">
+    Set to reload data from server (refresh local temporary storage)
+  </button>
+
   <div *ngIf="cardToShow==='overview' || cardToShow === 'all'" class="row">
     <!-- <div class="w3-right" style="margin-right: 1rem;">
        <a [routerLink]="['/clinician-manager', 'all', '']"><i
@@ -101,7 +106,8 @@
     </div>
 
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-      <patient-daily-average-observations [observationId]="'systolic'" [dateRange]="range">
+      <patient-daily-average-observations [observationId]="'systolic'"
+                                          [dateRange]="range">
       </patient-daily-average-observations>
     </div>
 
@@ -111,7 +117,7 @@
     </div>
 
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-      <patient-daily-average-observations [observationId]="'heartrate'" [dateRange]="range">
+      <patient-daily-average-observations [observationId]="'heartrate_resting'" [dateRange]="range">
       </patient-daily-average-observations>
     </div>
 
@@ -134,18 +140,19 @@
       <patient-daily-average-observations [observationId]='"sleep_minutes"' [dateRange]="range">
       </patient-daily-average-observations>
     </div>
-
-    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-      <patient-daily-average-observations [observationId]='"pain"' [dateRange]="range">
-      </patient-daily-average-observations>
-    </div>
+    <!--
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+          <patient-daily-average-observations [observationId]='"pain"' [dateRange]="range">
+          </patient-daily-average-observations>
+        </div>
+        -->
 
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [observationId]='"wellbeing"' [dateRange]="range">
       </patient-daily-average-observations>
     </div>
 
-    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
       <patient-daily-average-observations [observationId]='"radai"' [dateRange]="range">
       </patient-daily-average-observations>
     </div>
