Treatments and medication groups added in timeline

--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
@@ -97,6 +97,7 @@
     col-lg-{{selectedTreatment?'6':12}} col-xl-{{selectedTreatment?'8':12}}">
       <div [visTimeline]="visTimelineTreatments"
            [visTimelineItems]="visTimelineItemsTreatments"
+           [visTimelineGroups]="visTimelineGroups"
            [visTimelineOptions]="visTimelineTreatmentsOptions"
            (initialized)="timelineInitialized()">
       </div>
