--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -4,7 +4,7 @@
 
 
     <div class="" i18n="Patient Medication History"><i class="fa fa-medkit"> </i>
-      Patient Medication History
+      Patient's Medication History
 
       <span class="w3-right">
 
@@ -60,6 +60,7 @@ loading prescriptions
     col-lg-{{selectedMedication?'6':12}} col-xl-{{selectedMedication?'8':12}}">
       <div [visTimeline]="visTimelineMedications"
            [visTimelineItems]="visTimelineItemsMedications"
+           [visTimelineGroups]="visTimelineGroups"
            [visTimelineOptions]="visTimelineMedicationsOptions"
            (initialized)="timelineInitialized()">
       </div>
