Help text changed

--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
@@ -131,9 +131,10 @@
   </div>
 
   <div class="card-footer w3-white">
-    <div class="w3-tiny w3-right">Click timeline to use it. Scroll the timeline draging with mouse. Zoom using Alt key +
-      mouse scroll. Click
-      chosen treatment to view it's details.
+    <div class="w3-tiny w3-right">Click chosen treatment to view it's details. For desktop users: Scroll time line with
+      mousewheel. Move the mouse pointer to the left part of the timeline to scroll the whole page. Zoom timeline using
+      Alt key +
+      mousewheel.
     </div>
 
   </div>
