--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -97,9 +97,10 @@ loading prescriptions
   </div>
 
   <div class="card-footer w3-white">
-    <div class="w3-tiny w3-right">Click timeline to use it. Scroll the timeline draging with mouse. Zoom using Alt key +
-      mouse scroll. Click
-      chosen medication to view it's detail
+    <div class="w3-tiny w3-right">Click chosen medication to view it's details. For desktop users: Scroll time line with
+      mousewheel. Move the mouse pointer to the left part of the timeline to scroll the whole page. Zoom timeline using
+      Alt key +
+      mousewheel.
     </div>
   </div>
 
