Timeline help text simplified

--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -97,9 +97,7 @@ loading prescriptions
   </div>
 
   <div class="card-footer w3-white">
-    <div class="w3-tiny w3-right">Click chosen treatment to view it's details. Drag time line to scroll time. Zoom
-      timeline using
-      Alt key + mousewheel or pinch.
+    <div class="w3-tiny w3-right">Click chosen treatment to view it's details.
     </div>
   </div>
 
