CM Navigation simplified

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -65,10 +65,14 @@
       </li>
 
       <li class="nav-item nav-dropdown" routerLinkActive="open">
-        <a class="nav-link nav-dropdown nav-dropdown-toggle"
-           routerLinkActive="active" [routerLink]="['/clinician-manager/all/all/']"><i class="icon-speedometer"></i>
+        <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-speedometer"></i>
           Clinician Manager</a>
         <ul class="nav-dropdown-items">
+
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-manager/all/all/']"><i
+              class="icon-puzzle"></i> All info</a>
+          </li>
 
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-manager/overview/all/']"><i
