--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -41,79 +41,16 @@
           -->
 
 
-          <button type="button"
-                  class="button-clear {{chartType==='line'   ? 'button-clear-selected' : ''}}"
-                  (click)="toggleChartType('line')">
-            <i class="fa fa-line-chart">
-            </i>
-          </button>
-          <button type="button"
-                  class="button-clear {{chartType==='scatter'   ? 'button-clear-selected' : ''}}"
-                  (click)="toggleChartType('scatter')">
-            <i class="fa fa-dot-circle-o">
-            </i>
-          </button>
-          <!--
-          <button *ngIf="!(observationId==='all' && showAll)" type="button"
-                  class="picker-button {{chartType==='bar'   ? 'picker-button-selected' : ''}}"
-                  (click)="toggleChartType('bar')">
-            <i class="fa fa-bar-chart">
-            </i>
-          </button>
--->
-
-          <button *ngIf="!(observationId==='all' && showAll)"
-                  type="button"
-                  class="button-clear {{chartType==='area'   ? 'button-clear-selected' : ''}}"
-                  (click)="toggleChartType('area')">
-            <i class="fa fa-area-chart">
-            </i>
-          </button>
 
 
-          <button *ngIf="observationId==='all' && observationGroups && observationGroups.length!==1" type="button"
-                  class="button-clear"
-                  (click)="showHighContrast()">
-
-           <span *ngIf="!isHighContrast">
-             <span class="chart-normal-color1"> <i class="fa fa-circle"></i></span>
-             <span class="chart-normal-color4"> <i class="fa fa-circle"></i></span>
-           </span>
-            <span *ngIf="isHighContrast">
-             <span style="color:red"> <i class="fa fa-circle"></i></span>
-             <span style="color: green"> <i class="fa fa-circle"></i></span>
-           </span>
-            <span *ngIf="!isHighContrast"> Colours</span>
-            <span *ngIf="isHighContrast"> Colours</span>
-
-          </button>
 
 
-          <button *ngIf="isThereMid || isThereMax || isThereMin" type="button"
-                  class="button-clear"
-                  (click)="resetMinMidMax()">
-            <span>  <i class="fa {{showMinMidMax?'fa-circle':'fa-circle-o'}}"></i> </span>
-            <span *ngIf="!showMinMidMax"></span> <span *ngIf="showMinMidMax"></span> <span *ngIf="isThereMin">Min</span>
-            <span *ngIf="isThereMid">Mid</span> <span *ngIf="isThereMax">Max</span>
-            <span>
-                  </span>
-          </button>
-
-
-          <button
-
-            type="button"
-            class="button-clear"
-            (click)="toggleZero()">
-
-            <span>  <i class="fa {{forceYZero?'fa-circle':'fa-circle-o'}}"></i> </span> Zero Axis
-          </button>
 
 
         </div>
 
 
-        <div *ngIf="observationId==='all' && observationGroups"
+        <div
              class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6"
              style=" padding-right: 0.05rem; padding-bottom: 0.15rem;">
           <div class="" style=" margin-left: 0.25rem;">
@@ -127,13 +64,89 @@
             </button>
             -->
 
-            <span class="axis-buttons-legend">Left Axis</span>
+            <button *ngIf="observationId==='all' && observationGroups && observationGroups.length!==1" type="button"
+                    class="button-clear"
+                    (click)="showHighContrast()">
+
+           <span *ngIf="!isHighContrast">
+             <span class="chart-normal-color1"> <i class="fa fa-circle"></i></span>
+             <span class="chart-normal-color4"> <i class="fa fa-circle"></i></span>
+           </span>
+              <span *ngIf="isHighContrast">
+             <span style="color:red"> <i class="fa fa-circle"></i></span>
+             <span style="color: green"> <i class="fa fa-circle"></i></span>
+           </span>
+              <span *ngIf="!isHighContrast"> Colours</span>
+              <span *ngIf="isHighContrast"> Colours</span>
+
+            </button>
+
+
+            <button *ngIf="isThereMid || isThereMax || isThereMin" type="button"
+                    class="button-clear"
+                    (click)="resetMinMidMax()">
+              <span>  <i class="fa {{showMinMidMax?'fa-circle':'fa-circle-o'}}"></i> </span>
+              <span *ngIf="!showMinMidMax"></span> <span *ngIf="showMinMidMax"></span> <span
+              *ngIf="isThereMin">Min</span>
+              <span *ngIf="isThereMid">Mid</span> <span *ngIf="isThereMax">Max</span>
+              <span>
+                  </span>
+            </button>
+
+
+            <button
+
+              type="button"
+              class="button-clear"
+              (click)="toggleZero()">
+
+              <span>  <i class="fa {{forceYZero?'fa-circle':'fa-circle-o'}}"></i> </span> Zero Axis
+            </button>
+
+            <span *ngIf="observationId==='all' && observationGroups" class="axis-buttons-legend"><br>Left Axis</span>
+
+            <button type="button"
+                    class="button-clear {{chartType==='line'   ? 'button-clear-selected' : ''}}"
+                    (click)="toggleChartType('line')">
+              <i class="fa fa-line-chart">
+              </i>
+            </button>
+            <button type="button"
+                    class="button-clear {{chartType==='scatter'   ? 'button-clear-selected' : ''}}"
+                    (click)="toggleChartType('scatter')">
+              <i class="fa fa-dot-circle-o">
+              </i>
+            </button>
+            <!--
+            <button *ngIf="!(observationId==='all' && showAll)" type="button"
+                    class="picker-button {{chartType==='bar'   ? 'picker-button-selected' : ''}}"
+                    (click)="toggleChartType('bar')">
+              <i class="fa fa-bar-chart">
+              </i>
+            </button>
+  -->
+
+            <button
+              type="button"
+              class="button-clear {{chartType==='area'   ? 'button-clear-selected' : ''}}"
+              (click)="toggleChartType('area')">
+              <i class="fa fa-area-chart">
+              </i>
+            </button>
 
             <button *ngIf="observationId==='all' && observationGroups && observationGroups.length!==1" type="button"
                     class="button-clear"
                     (click)="showAllLeft()">
 
-              <i class="fa fa-plus-circle"></i> Show all L
+              <i class="fa fa-plus-circle"></i> Show all
+            </button>
+
+
+            <button *ngIf="observationId==='all' && observationGroups && observationGroups.length!==1" type="button"
+                    class="button-clear"
+                    (click)="clearLeft()">
+
+              <i class="fa fa-minus-circle"></i> Clear
             </button>
 
             <span *ngFor="let group of observationGroups">
@@ -144,7 +157,7 @@
                 <i class="fa {{group.showLeft?'fa-circle':'fa-circle-o'}}"></i>
               </span>
               {{group.name}} <span *ngIf="group.source"> ({{group.source}})</span>
-              L
+
             </button>
 
         </span>
@@ -156,7 +169,7 @@
              class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6"
              style="padding-left: 0.05rem; padding-bottom: 0.15rem;">
           <div class="" style=" margin-right: 0.25rem;">
-            <span class="axis-buttons-legend">Right Axis</span>
+            <span class="axis-buttons-legend"><br>Right Axis</span>
 
             <button type="button"
                     class="button-clear {{chartTypeR==='line'   ? 'button-clear-selected' : ''}}"
@@ -190,9 +203,9 @@
 
 
             <button *ngIf="observationGroups && observationGroups.length!==1"
-                     type="button"
-                     class="button-clear"
-                     (click)="clearRight()"><i class="fa fa-minus-circle"></i> Clear R
+                    type="button"
+                    class="button-clear"
+                    (click)="clearRight()"><i class="fa fa-minus-circle"></i> Clear
              </button>
 
             <span *ngFor="let group of observationGroups">
@@ -209,7 +222,7 @@
                                 <i class="fa {{group.showRight?'fa-circle':'fa-circle-o'}}"></i>
                             </span>
              {{group.name}} <span *ngIf="group.source"> ({{group.source}})</span>
-              R
+
             </button>
           </span>
         </span>
