--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -229,7 +229,7 @@
     </div>
 
 
-    <div class="chart-row">
+    <div class="chart-row" id="{{observationId}}-chart-row">
 
       <nvd3 id="{{observationId}}-cm-graph" [options]="options" [data]="data"></nvd3>
 
