small UI tweaks

--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
@@ -75,16 +75,16 @@
               (click)="toggleColor()">
 
     <span *ngIf="isColourful">
-              <span style="color:red"> <i class="fa fa-circle"></i></span>
-              <span style="color:red"> <i class="fa fa-circle"></i></span>
-              <span style="color:green"> <i class="fa fa-circle"></i></span>
-              <span style="color:green"> <i class="fa fa-circle"></i></span>
+
+              <span style="color:red"> <i class="fa fa-square"></i></span>
+              <span style="color:green"> <i class="fa fa-square"></i></span>
+
             </span>
         <span *ngIf="!isColourful">
-              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
-              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
-              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
-              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
+
+              <span style="color: grey;"> <i class="fa fa-square"></i></span>
+              <span style="color: grey;"> <i class="fa fa-square"></i></span>
+
             </span>
         Colours
 
