--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -39,16 +39,16 @@ loading prescriptions
               (click)="toggleColor()">
 
     <span *ngIf="isColourful">
-              <span style="color:red"> <i class="fa fa-circle"></i></span>
-              <span style="color:red"> <i class="fa fa-circle"></i></span>
-              <span style="color:green"> <i class="fa fa-circle"></i></span>
-              <span style="color:green"> <i class="fa fa-circle"></i></span>
+
+              <span style="color:red"> <i class="fa fa-square"></i></span>
+              <span style="color:green"> <i class="fa fa-square"></i></span>
+
             </span>
         <span *ngIf="!isColourful">
-              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
-              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
-              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
-              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
+
+              <span style="color: grey;"> <i class="fa fa-square"></i></span>
+              <span style="color: grey;"> <i class="fa fa-square"></i></span>
+
             </span>
         Colours
 
