UI popup tweaks.

--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.css
@@ -1,5 +1,6 @@
 .my-animate-left {
   position: relative;
+  z-index: 100;
   -webkit-animation: myanimateleft 0.4s;
   animation: myanimateleft 0.4s
 }
@@ -28,6 +29,7 @@
 
 .my-animate-left2 {
   position: relative;
+  z-index: 100;
   -webkit-animation: myanimateleft2 0.4s;
   animation: myanimateleft2 0.4s
 }
