--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.css
@@ -1,6 +1,7 @@
 
 .my-animate-left {
   position: relative;
+  z-index: 100;
   -webkit-animation: myanimateleft 0.4s;
   animation: myanimateleft 0.4s
 }
@@ -29,6 +30,7 @@
 
 .my-animate-left2 {
   position: relative;
+  z-index: 100;
   -webkit-animation: myanimateleft2 0.4s;
   animation: myanimateleft2 0.4s
 }
